--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,3 @@
-body{
-    background-color: #fff;
-    font-family: Roboto, sans-serif;
-}
-h1,h2,h3,h4,p{
-    margin-bottom: 0;
-    margin-top: 0;
-}
-
-/*убирает маркеры возле ненумер списков*/
-ul{
-    list-style: none;
-    margin-bottom: 0;
-    margin-top: 0;
-    padding-left: 0;
-}
-img{
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
 :root {
     --text-primary-color: #212121;
     --text-color: #757575;
@@ -29,13 +8,51 @@ img{
     --header-logo-color: #000;
     --footer-contacts-color: rgba(255, 255, 255, 0.6);
     --header-border-color: #ECECEC;
-    --border-portfolio-color:  #EEEEEE;/*--btn-alternative-hover-color:
+    --border-portfolio-color: #EEEEEE;
+    /*--btn-alternative-hover-color:
       
       #188CE8; */
+}
+body{
+    font-family: Roboto, sans-serif;
+    background-color: var(--white-color);
+    color: var(--text-primary-color);
+    font-size: 14px;
+    letter-spacing: 0.03em;
+}
+h1,h2,h3,h4,p{
+    margin: 0;
+}
+img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+/*убирает маркеры возле ненумер списков*/
+ul{
+    list-style: none;
+    margin: 0;
+    padding-left: 0;
+}
+.link{
+    text-decoration: none;
+}
+section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+.container {
+    /* outline: 2px solid gold; */
+    width: 1200px;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 button {
     /*font-family: inherit; принудительное унаследование от боди для кнопок*/
     cursor: pointer; /*курсор ладонь*/
+    display: block;
+    border: none;
+    border-radius: 4px;
 }
 .visually-hidden {
     position: absolute;
@@ -57,8 +74,6 @@ button {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    letter-spacing: 0.03em;
-    text-decoration: none;
 }
 
 .logo-header-menu {
@@ -96,20 +111,17 @@ button {
 }*/
 .header-mail-tel {
     margin-left: auto;
+    gap: 50px;
 }
-
-.header-contacts.mail {
-    /*   margin-left: auto;  не сработал*/
-    margin-right: 50px;
-}
+/*.header-contacts.mail {
+       margin-left: auto;  не сработал
+}*/
 /*nav a href*/
 .header-menu{
     color: var(--text-primary-color);
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em; 
-    text-decoration: none;
 }
 /*активная страница сайта*/
 .header-menu.current{
@@ -122,26 +134,30 @@ button {
 .header-contacts{
     color: var(--text-color);
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    text-decoration: none;
 }
 .header-contacts:hover,
 .header-contacts:focus {
     color: var(--accent-color);
 }
 header{
-    border: 1px solid var(--header-border-color);
+    border-bottom: 1px solid var(--header-border-color);
 }
 /*=============== hero =========================*/
 .hero {
     background-color: var(--footer-color);
     text-align: center;
+    padding: 200px 0;
 }
 .hero-title{
+    margin: 0 auto;
     margin-bottom: 30px;
+    
     color: var(--white-color);
+
+    width: 696px;
+    
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -162,7 +178,6 @@ header{
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
-    border-radius: 4px;
     letter-spacing: 0.06em;
 }
 .btn-alternative:focus,
@@ -180,25 +195,7 @@ header{
 .text{
     color: var(--text-color);
 }
-/*studio*/
 
-.container{
-   /* outline: 2px solid gold; */
-
-   width: 1200px;
-   padding-left: 15px;
-   padding-right: 15px;
-
-   margin-left: auto;
-   margin-right: auto;
-}
-
-.especially{
-    /* background-color: aquamarine; */
-
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
 /*h2*/
 .especially .title-section,
 .made .title-section,
@@ -207,7 +204,6 @@ header{
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
-    letter-spacing: 0.03em;
 }
 .made .title-section{
     margin-bottom: 50px;
@@ -229,24 +225,19 @@ header{
     margin-bottom: 10px;
 
     font-weight: 700;
-    font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 /*p*/
 .especially .text {
-    font-size: 14px;
     line-height: 1.71;
-    letter-spacing: 0.03em;
 }
 /*=============== made ================*/
 .made{
     /* background-color: darkcyan; */
+    padding-top: 0;
 }
-.made .container{
-    padding-bottom: 94px;
-}
+
 /*h2*/
 .made .title-section,
 .team .title-section {
@@ -268,10 +259,7 @@ header{
 .team {
     background-color: var(--btn-prim-color);
 }
-.team .container{
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
+
 /*h2
 /*ul выше описаны*/
 
@@ -279,54 +267,64 @@ header{
 .team-employees{
     flex-basis: calc( (100% - 90px ) / 4);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 0px 0px 4px 4px;
+    border-radius: 0px 0px 4px 4px;
+    background-color: var(--white-color);
+}
+.team-cards-title{
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 /*h3*/
 .team .title{
-    margin-top: 30px;
+    /* margin-top: 30px; */
     margin-bottom: 10px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
-  text-align: center; 
-    letter-spacing: 0.03em;
-}
+    text-align: center; 
+    }
 /*p*/
 .team .text{
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
-    letter-spacing: 0.03em;
 }
 
 /*----------------------portfolio------------*/
+.portfolio-filtr{
+    padding-bottom: 34px;
+}
 .btn.portfolio{
-    padding-top: 94px;
-    padding-bottom: 50px;
+    /* padding-top: 94px;
+    padding-bottom: 50px; */
     display: flex;
     justify-content: center;
     column-gap: 8px;
+}
+.portfolio{
+    padding-top: 0;
 }
 .portfolio-cards-block{
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-    padding-bottom: 94px;
+    
 }
 .portfolio-cards{
     flex-basis: calc((100% - 60px) / 3);
-    border: 1px solid var(--border-portfolio-color);
+   
     
 }
-.portfolio .link{
-    text-decoration: none;
+.portfolio-cards-title{
+    padding: 20px 24px;
+    border: 1px solid var(--border-portfolio-color);
 }
 /*h2*/
 .portfolio .title{
-    margin-top: 20px;
+    /* margin-top: 20px; */
     margin-bottom: 4px;
-    margin-left: 24px;
+    /* margin-left: 24px; */
 
     font-weight: 700;
     font-size: 18px;
@@ -335,11 +333,10 @@ header{
 }
 /*p*/
 .portfolio .text{
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     font-size: 16px;
     line-height: 1.88;
-    letter-spacing: 0.03em; 
-    margin-left: 24px;
+    /* margin-left: 24px; */
 }
 
 /*============= кнопки портфолио =============*/ 
@@ -354,9 +351,6 @@ header{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
-    letter-spacing: 0.03em;
-    
-    border: transparent;
 }
 .btn-prim:hover,
 .btn-prim:focus
@@ -368,36 +362,38 @@ header{
 
 footer{
     background-color: var(--footer-color);
-    letter-spacing: 0.03em;
+    padding: 60px 0;
 }
-.footer .container {
-    padding-top: 60px;
-    padding-bottom: 60px;
-}
+/* .footer .container {
+   
+} */
 address {
     margin-top: 20px;
 }
 .footer-logo {
     color: var(--white-color);
 }
+
 .footer-address,
 .footer-contacts{
     color: var(--white-color);
     /* font-weight: 400; */
-    font-size: 14px;
     line-height: 1.71;
-    text-decoration: none;
     font-style: normal;
 }
 .footer-contacts {
     color: var(--footer-contacts-color);
     
 }
-.footer-address,
-.footer-contacts.mail{
-    padding-bottom: 9px;
+.footer-address-list{
+    margin-bottom:  9px;
 }
-
+.without-margin{
+     margin-bottom: 0;
+}
+/* .footer-address-contact {
+    margin-bottom: 9px;
+} не согласна*/
 .footer-address:hover,
 .footer-address:focus,
 .footer-contacts:hover,
